# local-ai-meeting-minutes

./: .env.example  .gitignore  CLAUDE.md  README.md  alignment_debug.txt  outputs_analysis.txt  plan.md  pyproject.toml
backend/: .env.example  BUG_FIX_SUMMARY.md  README.md  analyze_all_outputs.py  check_ffmpeg.py  check_plda.py  check_torchcodec.py  debug_alignment.py  download_plda.py  environment-cuda.yml  environment.yml  pyproject.toml  test_config.py
backend/scripts/: download_3dspeaker_submodels.py  download_all_models.py  download_correct_3dspeaker.py  download_funasr_models.py  download_models.py
backend/src/meeting_ai/: __init__.py  config.py  gui.py  models.py
backend/src/meeting_ai/api/: __init__.py  main.py  schemas.py
backend/src/meeting_ai/api/routes/: __init__.py  history.py  models.py  process.py  realtime.py
backend/src/meeting_ai/services/: __init__.py  alignment.py  asr.py  chat.py  cloud_asr.py  correction.py  diarization.py  gender.py  llm.py  llm_postprocess.py  naming.py  online_diarization.py  streaming_asr.py  summary.py
backend/src/meeting_ai/utils/: __init__.py  audio.py  enhance.py  wav_writer.py
backend/tests/: conftest.py  test_basic.py  test_diarization.py  test_enhance.py
docs/: FUTURE_ARCHITECTURE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/audio-worklet/: pcm-processor.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AudioPlayer.tsx  ChatPanel.tsx  Dialog.tsx  ProgressBar.tsx  SegmentCard.tsx  SummaryPanel.tsx  index.ts
frontend/src/hooks/: useAudioCapture.ts  useAudioPlayer.ts  useRealtimeAudio.ts  useRealtimeWebSocket.ts  useRecordingTimer.ts
frontend/src/pages/: FilePage.tsx  RealtimePage.tsx  SettingsPage.tsx
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
scripts/: snapshot-check.ps1  snapshot.ps1
src/meeting_ai/: __init__.py  cli.py  config.py  gui.py  logger.py  models.py
src/meeting_ai/core/: __init__.py
src/meeting_ai/services/: __init__.py  alignment.py  asr.py  correction.py  diarization.py  gender.py  llm_postprocess.py  naming.py  summary.py
src/meeting_ai/utils/: __init__.py  audio.py  enhance.py
